updated UI to match the add order form page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 labtrackingapp.title=Lab Tracking App
 test=this is a test message
-addorderpagetitle=Order Test
+addorderpagetitle=Order a new test
 prelabdiagnosislabel=Pre-lab Diagnosis
 proceduresitelabel=Procedure\/Site
 instructionslabel=Instructions
