updated UI to match the order details page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,3 +5,7 @@ prelabdiagnosislabel=Pre-lab Diagnosis
 proceduresitelabel=Procedure\/Site
 instructionslabel=Instructions
 clinicalhistorylabel=Clinical History
+orderdetailstitle=Test details for
+pathologyspecimendetailslabel=Pathology Specimen details
+resultdetailslabel=Result details
+orderdetailslabel=Order details
