fixed code so that you can create an order

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -9,3 +9,17 @@ orderdetailstitle=Test details for
 pathologyspecimendetailslabel=Pathology Specimen details
 resultdetailslabel=Result details
 orderdetailslabel=Order details
+orderdetails.residentlabel=Resident
+orderdetails.mdtonotifylabel=MD to notify
+orderdetails.sampledatelabel=Sample Date
+orderdetails.locationlabel=Location where procedure performed
+orderdetails.attendingsurgeonlabel=Attending surgeon
+orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+orderdetails.additionalinformationlabel=Additional information
+orderdetails.urgentreviewlabel=Urgent review
+orderdetails.specimandetailslabel=Speciman details
+orderdetails.resultsdatelabel=Results Date
+orderdetails.noteslabel=Notes
+orderdetails.uploadfilelabel=Upload file
+
