--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ test=this is a test message
 addorderpagetitle=Order a new test
 prelabdiagnosislabel=Pre-lab Diagnosis
 proceduresitelabel=Procedure\/Site
+caresettinglabel= Care Setting
 instructionslabel=Instructions
 clinicalhistorylabel=Clinical History
 orderdetailstitle=Test details for
