added translations for list page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 labtrackingapp.title=Lab Tracking App
-test=this is a test message
 addorderpagetitle=Order a new test
+addorder.savingtitle=Saving Test Order
 prelabdiagnosislabel=Pre-lab Diagnosis
 proceduresitelabel=Procedure\/Site
 caresettinglabel= Care Setting
@@ -23,4 +23,18 @@ orderdetails.specimandetailslabel=Speciman details
 orderdetails.resultsdatelabel=Results Date
 orderdetails.noteslabel=Notes
 orderdetails.uploadfilelabel=Upload file
+listpage.panelheading=Test Monitor Page
 listpage.pleasewait=Updating, please wait
+listpage.patient=Patient ID
+listpage.name=Name
+listpage.status=Status
+listpage.requestdate=Request Date
+listpage.sampledate=Sample Date
+listpage.resultdate=Result Date
+listpage.actions=Actions
+listpage.details=Details
+listpage.to=to
+listpage.from=from
+listpage.search=Search for patient
+listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
+
