--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -38,3 +38,6 @@ listpage.from=from
 listpage.search=Search for patient
 listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
 
+labtracking.app.label=Lab Tracking
+labtracking.order.label=Order Lab
+
