added a few new message codes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -38,6 +38,6 @@ listpage.from=from
 listpage.search=Search for patient
 listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
 
-labtracking.app.label=Lab Tracking
-labtracking.order.label=Order Lab
+labtrackingapp.app.label=Lab Tracking
+labtrackingapp.order.label=Order Lab
 
