added more of the details page code

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,43 +1,43 @@
 labtrackingapp.title=Lab Tracking App
-addorderpagetitle=Order a new test
-addorder.savingtitle=Saving Test Order
-prelabdiagnosislabel=Pre-lab Diagnosis
-proceduresitelabel=Procedure\/Site
-caresettinglabel= Care Setting
-instructionslabel=Instructions
-clinicalhistorylabel=Clinical History
-orderdetailstitle=Test details for
-pathologyspecimendetailslabel=Pathology Specimen details
-resultdetailslabel=Result details
-orderdetailslabel=Order details
-orderdetails.residentlabel=Resident
-orderdetails.mdtonotifylabel=MD to notify
-orderdetails.sampledatelabel=Sample Date
-orderdetails.locationlabel=Location where procedure performed
-orderdetails.attendingsurgeonlabel=Attending surgeon
-orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
-orderdetails.postopdiagnosislabel=Post-Op Diagnosis
-orderdetails.additionalinformationlabel=Additional information
-orderdetails.urgentreviewlabel=Urgent review
-orderdetails.specimandetailslabel=Speciman details
-orderdetails.resultsdatelabel=Results Date
-orderdetails.noteslabel=Notes
-orderdetails.uploadfilelabel=Upload file
-listpage.panelheading=Test Monitor Page
-listpage.pleasewait=Updating, please wait
-listpage.patient=Patient ID
-listpage.name=Name
-listpage.status=Status
-listpage.requestdate=Request Date
-listpage.sampledate=Sample Date
-listpage.resultdate=Result Date
-listpage.actions=Actions
-listpage.details=Details
-listpage.to=to
-listpage.from=from
-listpage.search=Search for patient
-listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
-
+labtrackingapp.addorder.pagetitle=Order a new test
+labtrackingapp.savingtitle=Saving Test Order
+labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
+labtrackingapp.proceduresitelabel=Procedure\/Site
+labtrackingapp.procedureNonCoded = Procedure Non-Coded
+labtrackingapp.caresettinglabel= Care Setting
+labtrackingapp.instructionslabel=Instructions
+labtrackingapp.clinicalhistorylabel=Clinical History
+labtrackingapp.addorder.orderdetailstitle=Test details for
+labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
+labtrackingapp.resultdetailslabel=Result details
+labtrackingapp.orderdetails.label=Order details
+labtrackingapp.orderdetails.residentlabel=Resident
+labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
+labtrackingapp.orderdetails.sampledatelabel=Sample Date
+labtrackingapp.orderdetails.locationlabel=Location where procedure performed
+labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+labtrackingapp.orderdetails.additionalinformationlabel=Additional information
+labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
+labtrackingapp.orderdetails.specimandetailslabel=Speciman details
+labtrackingapp.orderdetails.resultsdatelabel=Results Date
+labtrackingapp.orderdetails.noteslabel=Notes
+labtrackingapp.orderdetails.uploadfilelabel=Upload file
+labtrackingapp.listpage.panelheading=Test Monitor Page
+labtrackingapp.listpage.pleasewait=Updating, please wait
+labtrackingapp.listpage.patient=Patient ID
+labtrackingapp.listpage.name=Name
+labtrackingapp.listpage.status=Status
+labtrackingapp.listpage.requestdate=Request Date
+labtrackingapp.listpage.sampledate=Sample Date
+labtrackingapp.listpage.resultdate=Result Date
+labtrackingapp.listpage.actions=Actions
+labtrackingapp.listpage.details=Details
+labtrackingapp.listpage.to=to
+labtrackingapp.listpage.from=from
+labtrackingapp.listpage.search=Search for patient
+labtrackingapp.listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
 
