added file upload of results

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -37,7 +37,7 @@ labtrackingapp.listpage.details=Details
 labtrackingapp.listpage.to=to
 labtrackingapp.listpage.from=from
 labtrackingapp.listpage.search=Search for patient
-labtrackingapp.listpage.ordercancelreasonprompt=Please provide a reason for canceling the order
+labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want to cancel this Test Order?
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
 
