updated print page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-labtrackingapp.title=Lab Tracking App
+labtrackingapp.title=Lab Tracking
 labtrackingapp.addorder.pagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
@@ -7,9 +7,9 @@ labtrackingapp.procedureNonCoded = Procedure Non-Coded
 labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
 labtrackingapp.clinicalhistorylabel=Clinical History
-labtrackingapp.addorder.orderdetailstitle=Test details for
 labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
 labtrackingapp.resultdetailslabel=Result details
+labtrackingapp.orderdetails.title=Lab Test details
 labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
@@ -24,7 +24,7 @@ labtrackingapp.orderdetails.specimandetailslabel=Speciman details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
 labtrackingapp.orderdetails.uploadfilelabel=Upload file
-labtrackingapp.listpage.panelheading=Test Monitor Page
+labtrackingapp.listpage.panelheading=Test Orders
 labtrackingapp.listpage.pleasewait=Updating, please wait
 labtrackingapp.listpage.patient=Patient ID
 labtrackingapp.listpage.name=Name
@@ -40,4 +40,4 @@ labtrackingapp.listpage.search=Search for patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want to cancel this Test Order?
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
-
+labtrackingapp.orderNumberLabel=Order #
