--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ labtrackingapp.orderdetails.title=Lab Test details
 labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
-labtrackingapp.orderdetails.sampledatelabel=Sample Date
+labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
 labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
