fixed navigation issues

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -41,3 +41,5 @@ labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want t
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderNumberLabel=Order #
+labtrackingapp.returnToListPage=Return to Test Order List
+labtrackingapp.cancelOrder=Cancel Test Order
