added canceled filter

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,7 +23,7 @@ labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
 labtrackingapp.orderdetails.specimandetailslabel=Speciman details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
-labtrackingapp.orderdetails.uploadfilelabel=Upload file
+labtrackingapp.orderdetails.uploadfilelabel=Results File
 labtrackingapp.listpage.panelheading=Test Orders
 labtrackingapp.listpage.pleasewait=Updating, please wait
 labtrackingapp.listpage.patient=Patient ID
@@ -43,3 +43,7 @@ labtrackingapp.order.label=Order Lab
 labtrackingapp.orderNumberLabel=Order #
 labtrackingapp.returnToListPage=Return to Test Order List
 labtrackingapp.cancelOrder=Cancel Test Order
+labtrackingapp.proceduresSelected=Selected
+labtrackingapp.proceduresAvailable=Available
+labtrackingapp.loading=Loading
+labtrackingapp.purge=Purge
