fixed title on add order page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 labtrackingapp.title=Lab Tracking
-labtrackingapp.addorder.pagetitle=Order a new test
+labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
 labtrackingapp.proceduresitelabel=Procedure\/Site
