fixed list text

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Details
 labtrackingapp.listpage.to=to
 labtrackingapp.listpage.from=from
+labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Search for patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want to cancel this Test Order?
 labtrackingapp.app.label=Lab Tracking
