--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -42,7 +42,7 @@ labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want t
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderNumberLabel=Order #
-labtrackingapp.returnToListPage=Return to Test Order List
+labtrackingapp.returnToListPage=Return to List
 labtrackingapp.cancelOrder=Cancel Test Order
 labtrackingapp.proceduresSelected=Selected
 labtrackingapp.proceduresAvailable=Available
