--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -48,3 +48,7 @@ labtrackingapp.proceduresSelected=Selected
 labtrackingapp.proceduresAvailable=Available
 labtrackingapp.loading=Loading
 labtrackingapp.purge=Purge
+labtrackingapp.replacePDF=Replace PDF
+labtrackingapp.addPDF=Add PDF
+labtrackingapp.removePDF=Remove PDF
+labtrackingapp.downloadPDF=Replace PDF
