fixed text for download button

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -51,4 +51,4 @@ labtrackingapp.purge=Purge
 labtrackingapp.replacePDF=Replace PDF
 labtrackingapp.addPDF=Add PDF
 labtrackingapp.removePDF=Remove PDF
-labtrackingapp.downloadPDF=Replace PDF
+labtrackingapp.downloadPDF=Download PDF
