--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -38,7 +38,8 @@ labtrackingapp.listpage.to=to
 labtrackingapp.listpage.from=from
 labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Search for patient
-labtrackingapp.listpage.ordercancelreasonprompt=Are you sure tha that you want to cancel this Test Order?
+labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
+labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderNumberLabel=Order #
