UHM-2642: Clinical Dashboard Pathology Display

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -53,3 +53,11 @@ labtrackingapp.replacePDF=Replace PDF
 labtrackingapp.addPDF=Add PDF
 labtrackingapp.removePDF=Remove PDF
 labtrackingapp.downloadPDF=Download PDF
+labtrackingapp.pathology=Pathology
+labtrackingapp.noResults=No result
+labtrackingapp.notTaken=Not taken
+labtrackingapp.taken=taken
+labtrackingapp.results=results
+labtrackingapp.requested=requested
+labtrackingapp.procedure=Procedure
+labtrackingapp.procedures=Procedures
