initial code with accession number

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -61,3 +61,4 @@ labtrackingapp.results=results
 labtrackingapp.requested=requested
 labtrackingapp.procedure=Procedure
 labtrackingapp.procedures=Procedures
+labtrackingapp.accessionNumber=Accession Number
