initial code with accession number

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -62,3 +62,4 @@ labtrackingapp.requested=requested
 labtrackingapp.procedure=Procedure
 labtrackingapp.procedures=Procedures
 labtrackingapp.accessionNumber=Accession Number
+labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
