fix character encoding of translated files

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,65 +1,65 @@
-# labtrackingapp.title=Lab Tracking
-# labtrackingapp.addorderpagetitle=Order a new test
-# labtrackingapp.savingtitle=Saving Test Order
-# labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
-# labtrackingapp.proceduresitelabel=Procedure\\/Site
-# labtrackingapp.procedureNonCoded = Procedure Non-Coded
-# labtrackingapp.caresettinglabel= Care Setting
+labtrackingapp.title=Lab Tracking
+labtrackingapp.addorderpagetitle=Order a new test
+labtrackingapp.savingtitle=Saving Test Order
+labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
+labtrackingapp.proceduresitelabel=Procedure\\/Site
+labtrackingapp.procedureNonCoded = Procedure Non-Coded
+labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
-# labtrackingapp.clinicalhistorylabel=Clinical History
-# labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
-# labtrackingapp.resultdetailslabel=Result details
-# labtrackingapp.orderdetails.title=Lab Test details
-# labtrackingapp.orderdetails.label=Order details
-labtrackingapp.orderdetails.residentlabel=Résidant
-# labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
-# labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
-# labtrackingapp.orderdetails.locationlabel=Location where procedure performed
-# labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-# labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
-# labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
-labtrackingapp.orderdetails.additionalinformationlabel=Information supplémentaire
-# labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
-# labtrackingapp.orderdetails.specimandetailslabel=Speciman details
-# labtrackingapp.orderdetails.resultsdatelabel=Results Date
+labtrackingapp.clinicalhistorylabel=Clinical History
+labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
+labtrackingapp.resultdetailslabel=Result details
+labtrackingapp.orderdetails.title=Lab Test details
+labtrackingapp.orderdetails.label=Order details
+labtrackingapp.orderdetails.residentlabel=RÃ©sidant
+labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
+labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
+labtrackingapp.orderdetails.locationlabel=Location where procedure performed
+labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+labtrackingapp.orderdetails.additionalinformationlabel=Information supplÃ©mentaire
+labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
+labtrackingapp.orderdetails.specimandetailslabel=Speciman details
+labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
-# labtrackingapp.orderdetails.uploadfilelabel=Results File
-# labtrackingapp.listpage.panelheading=Test Orders
-# labtrackingapp.listpage.pleasewait=Updating, please wait
+labtrackingapp.orderdetails.uploadfilelabel=Results File
+labtrackingapp.listpage.panelheading=Test Orders
+labtrackingapp.listpage.pleasewait=Updating, please wait
 labtrackingapp.listpage.patient=ID patient
 labtrackingapp.listpage.name=Nom
-labtrackingapp.listpage.status=État
-# labtrackingapp.listpage.requestdate=Request Date
-# labtrackingapp.listpage.sampledate=Sample Date
-# labtrackingapp.listpage.resultdate=Result Date
+labtrackingapp.listpage.status=Ã‰tat
+labtrackingapp.listpage.requestdate=Request Date
+labtrackingapp.listpage.sampledate=Sample Date
+labtrackingapp.listpage.resultdate=Result Date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
-labtrackingapp.listpage.to=à
+labtrackingapp.listpage.to=Ã 
 labtrackingapp.listpage.from=de
-# labtrackingapp.listpage.enter=enter
+labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Recherche pour le patient
-# labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
-# labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
-# labtrackingapp.app.label=Lab Tracking
-# labtrackingapp.order.label=Order Lab
-# labtrackingapp.orderNumberLabel=Order \#
-# labtrackingapp.returnToListPage=Return to List
-# labtrackingapp.cancelOrder=Cancel Test Order
-# labtrackingapp.proceduresSelected=Selected
+labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
+labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
+labtrackingapp.app.label=Lab Tracking
+labtrackingapp.order.label=Order Lab
+labtrackingapp.orderNumberLabel=Order \#
+labtrackingapp.returnToListPage=Return to List
+labtrackingapp.cancelOrder=Cancel Test Order
+labtrackingapp.proceduresSelected=Selected
 labtrackingapp.proceduresAvailable=Disponibles
 labtrackingapp.loading=Chargement en cours...
-# labtrackingapp.purge=Purge
-# labtrackingapp.replacePDF=Replace PDF
-# labtrackingapp.addPDF=Add PDF
-# labtrackingapp.removePDF=Remove PDF
-# labtrackingapp.downloadPDF=Download PDF
-# labtrackingapp.pathology=Pathology
-# labtrackingapp.noResults=No result
-# labtrackingapp.notTaken=Not taken
-# labtrackingapp.taken=taken
-labtrackingapp.results=résultats
-labtrackingapp.requested=demandé
-labtrackingapp.procedure=Procédure
-labtrackingapp.procedures=Procédures
-labtrackingapp.accessionNumber=Numéro d'entrée
-# labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
+labtrackingapp.purge=Purge
+labtrackingapp.replacePDF=Replace PDF
+labtrackingapp.addPDF=Add PDF
+labtrackingapp.removePDF=Remove PDF
+labtrackingapp.downloadPDF=Download PDF
+labtrackingapp.pathology=Pathology
+labtrackingapp.noResults=No result
+labtrackingapp.notTaken=Not taken
+labtrackingapp.taken=taken
+labtrackingapp.results=rÃ©sultats
+labtrackingapp.requested=demandÃ©
+labtrackingapp.procedure=ProcÃ©dure
+labtrackingapp.procedures=ProcÃ©dures
+labtrackingapp.accessionNumber=NumÃ©ro d'entrÃ©e
+labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
