--- a/api/src/main/resources/messages_ht.properties
+++ b/api/src/main/resources/messages_ht.properties
@@ -1,65 +1,65 @@
-# labtrackingapp.title=Lab Tracking
-# labtrackingapp.addorderpagetitle=Order a new test
-# labtrackingapp.savingtitle=Saving Test Order
-# labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
-# labtrackingapp.proceduresitelabel=Procedure\\/Site
-# labtrackingapp.procedureNonCoded = Procedure Non-Coded
-# labtrackingapp.caresettinglabel= Care Setting
-# labtrackingapp.instructionslabel=Instructions
-# labtrackingapp.clinicalhistorylabel=Clinical History
-# labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
-# labtrackingapp.resultdetailslabel=Result details
-# labtrackingapp.orderdetails.title=Lab Test details
-# labtrackingapp.orderdetails.label=Order details
-# labtrackingapp.orderdetails.residentlabel=Resident
-# labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
-# labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
-# labtrackingapp.orderdetails.locationlabel=Location where procedure performed
-# labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-# labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
-# labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
-# labtrackingapp.orderdetails.additionalinformationlabel=Additional information
-# labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
-# labtrackingapp.orderdetails.specimandetailslabel=Speciman details
-# labtrackingapp.orderdetails.resultsdatelabel=Results Date
-# labtrackingapp.orderdetails.noteslabel=Notes
-# labtrackingapp.orderdetails.uploadfilelabel=Results File
-# labtrackingapp.listpage.panelheading=Test Orders
-# labtrackingapp.listpage.pleasewait=Updating, please wait
-# labtrackingapp.listpage.patient=Patient ID
-# labtrackingapp.listpage.name=Name
-# labtrackingapp.listpage.status=Status
-# labtrackingapp.listpage.requestdate=Request Date
-# labtrackingapp.listpage.sampledate=Sample Date
-# labtrackingapp.listpage.resultdate=Result Date
-# labtrackingapp.listpage.actions=Actions
-# labtrackingapp.listpage.details=Details
-# labtrackingapp.listpage.to=to
-# labtrackingapp.listpage.from=from
-# labtrackingapp.listpage.enter=enter
-# labtrackingapp.listpage.search=Search for patient
-# labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
-# labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
-# labtrackingapp.app.label=Lab Tracking
-# labtrackingapp.order.label=Order Lab
-# labtrackingapp.orderNumberLabel=Order \#
-# labtrackingapp.returnToListPage=Return to List
-# labtrackingapp.cancelOrder=Cancel Test Order
-# labtrackingapp.proceduresSelected=Selected
-# labtrackingapp.proceduresAvailable=Available
-# labtrackingapp.loading=Loading
-# labtrackingapp.purge=Purge
-# labtrackingapp.replacePDF=Replace PDF
-# labtrackingapp.addPDF=Add PDF
-# labtrackingapp.removePDF=Remove PDF
-# labtrackingapp.downloadPDF=Download PDF
-# labtrackingapp.pathology=Pathology
-# labtrackingapp.noResults=No result
-# labtrackingapp.notTaken=Not taken
-# labtrackingapp.taken=taken
-# labtrackingapp.results=results
-# labtrackingapp.requested=requested
-# labtrackingapp.procedure=Procedure
-# labtrackingapp.procedures=Procedures
-# labtrackingapp.accessionNumber=Accession Number
-# labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
+labtrackingapp.title=Lab Tracking
+labtrackingapp.addorderpagetitle=Order a new test
+labtrackingapp.savingtitle=Saving Test Order
+labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
+labtrackingapp.proceduresitelabel=Procedure\\/Site
+labtrackingapp.procedureNonCoded = Procedure Non-Coded
+labtrackingapp.caresettinglabel= Care Setting
+labtrackingapp.instructionslabel=Instructions
+labtrackingapp.clinicalhistorylabel=Clinical History
+labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
+labtrackingapp.resultdetailslabel=Result details
+labtrackingapp.orderdetails.title=Lab Test details
+labtrackingapp.orderdetails.label=Order details
+labtrackingapp.orderdetails.residentlabel=Resident
+labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
+labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
+labtrackingapp.orderdetails.locationlabel=Location where procedure performed
+labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+labtrackingapp.orderdetails.additionalinformationlabel=Additional information
+labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
+labtrackingapp.orderdetails.specimandetailslabel=Speciman details
+labtrackingapp.orderdetails.resultsdatelabel=Results Date
+labtrackingapp.orderdetails.noteslabel=Notes
+labtrackingapp.orderdetails.uploadfilelabel=Results File
+labtrackingapp.listpage.panelheading=Test Orders
+labtrackingapp.listpage.pleasewait=Updating, please wait
+labtrackingapp.listpage.patient=Patient ID
+labtrackingapp.listpage.name=Name
+labtrackingapp.listpage.status=Status
+labtrackingapp.listpage.requestdate=Request Date
+labtrackingapp.listpage.sampledate=Sample Date
+labtrackingapp.listpage.resultdate=Result Date
+labtrackingapp.listpage.actions=Actions
+labtrackingapp.listpage.details=Details
+labtrackingapp.listpage.to=to
+labtrackingapp.listpage.from=from
+labtrackingapp.listpage.enter=enter
+labtrackingapp.listpage.search=Search for patient
+labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
+labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
+labtrackingapp.app.label=Lab Tracking
+labtrackingapp.order.label=Order Lab
+labtrackingapp.orderNumberLabel=Order \#
+labtrackingapp.returnToListPage=Return to List
+labtrackingapp.cancelOrder=Cancel Test Order
+labtrackingapp.proceduresSelected=Selected
+labtrackingapp.proceduresAvailable=Available
+labtrackingapp.loading=Loading
+labtrackingapp.purge=Purge
+labtrackingapp.replacePDF=Replace PDF
+labtrackingapp.addPDF=Add PDF
+labtrackingapp.removePDF=Remove PDF
+labtrackingapp.downloadPDF=Download PDF
+labtrackingapp.pathology=Pathology
+labtrackingapp.noResults=No result
+labtrackingapp.notTaken=Not taken
+labtrackingapp.taken=taken
+labtrackingapp.results=results
+labtrackingapp.requested=requested
+labtrackingapp.procedure=Procedure
+labtrackingapp.procedures=Procedures
+labtrackingapp.accessionNumber=Accession Number
+labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
