added message code for Order Pathology Test

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -42,6 +42,7 @@ labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want 
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Lab Tracking
 labtrackingapp.order.label=Order Lab
+labtrackingapp.orderPathology.label=Order Pathology Test
 labtrackingapp.orderNumberLabel=Order #
 labtrackingapp.returnToListPage=Return to List
 labtrackingapp.cancelOrder=Cancel Test Order
