UHM-3077, change Pre-Op Diagnosis label

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 labtrackingapp.title=Lab Tracking
 labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
-labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
+labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.proceduresitelabel=Procedure\/Site
 labtrackingapp.procedureNonCoded = Procedure Non-Coded
 labtrackingapp.caresettinglabel= Care Setting
@@ -16,7 +16,7 @@ labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
 labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
