change to consistently use 10-Apr-2017 date format

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
 labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
+labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
 labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
