Rename 'Lab Tracking' to 'Pathology Tracting'

--- a/api/src/main/resources/messages_ht.properties
+++ b/api/src/main/resources/messages_ht.properties
@@ -1,4 +1,4 @@
-labtrackingapp.title=Lab Tracking
+labtrackingapp.title=Pathology Tracking
 labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
@@ -40,7 +40,7 @@ labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Search for patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
-labtrackingapp.app.label=Lab Tracking
+labtrackingapp.app.label=Pathology Tracking
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderNumberLabel=Order \#
 labtrackingapp.returnToListPage=Return to List
