Added labtrackingapp.labSummary label

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -42,6 +42,7 @@ labtrackingapp.listpage.search=Search for patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Pathology Tracking
+labtrackingapp.labSummary=Pathology Summary
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderPathology.label=Order Pathology Test
 labtrackingapp.orderNumberLabel=Order #
