Translated action item to French

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,8 +1,8 @@
 labtrackingapp.title=Pathology Tracking
 labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
-labtrackingapp.prelabdiagnosislabel=Pre-lab Diagnosis
-labtrackingapp.proceduresitelabel=Procedure\\/Site
+labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
+labtrackingapp.proceduresitelabel=Procedure\/Site
 labtrackingapp.procedureNonCoded = Procedure Non-Coded
 labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
@@ -14,9 +14,10 @@ labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Résidant
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
 labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
+labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre Pathology Diagnosis
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
 labtrackingapp.orderdetails.additionalinformationlabel=Information supplémentaire
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
@@ -34,19 +35,21 @@ labtrackingapp.listpage.sampledate=Sample Date
 labtrackingapp.listpage.resultdate=Result Date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
-labtrackingapp.listpage.to=à
-labtrackingapp.listpage.from=de
+labtrackingapp.listpage.à=à
+labtrackingapp.listpage.de=de
 labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Recherche pour le patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Pathology Tracking
+labtrackingapp.labSummary=Pathology Summary
 labtrackingapp.order.label=Order Lab
-labtrackingapp.orderNumberLabel=Order \#
+labtrackingapp.orderPathology.label=Ordre de pathologie
+labtrackingapp.orderNumberLabel=Order #
 labtrackingapp.returnToListPage=Return to List
 labtrackingapp.cancelOrder=Cancel Test Order
 labtrackingapp.proceduresSelected=Selected
-labtrackingapp.proceduresAvailable=Disponibles
+labtrackingapp.proceduresDisponibles=Disponibles
 labtrackingapp.loading=Chargement en cours...
 labtrackingapp.purge=Purge
 labtrackingapp.replacePDF=Replace PDF
@@ -57,8 +60,8 @@ labtrackingapp.pathology=Pathology
 labtrackingapp.noResults=No result
 labtrackingapp.notTaken=Not taken
 labtrackingapp.taken=taken
-labtrackingapp.results=résultats
-labtrackingapp.requested=demandé
+labtrackingapp.résultats=résultats
+labtrackingapp.demandé=demandé
 labtrackingapp.procedure=Procédure
 labtrackingapp.procedures=Procédures
 labtrackingapp.accessionNumber=Numéro d'entrée
