--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,4 +1,4 @@
-labtrackingapp.title=Pathology Tracking
+labtrackingapp.title=Suivi de la pathologie
 labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
@@ -35,21 +35,21 @@ labtrackingapp.listpage.sampledate=Sample Date
 labtrackingapp.listpage.resultdate=Result Date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
-labtrackingapp.listpage.à=à
-labtrackingapp.listpage.de=de
+labtrackingapp.listpage.to=à
+labtrackingapp.listpage.from=de
 labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Recherche pour le patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
-labtrackingapp.app.label=Pathology Tracking
+labtrackingapp.app.label=Suivi de la pathologie
 labtrackingapp.labSummary=Pathology Summary
 labtrackingapp.order.label=Order Lab
 labtrackingapp.orderPathology.label=Ordre de pathologie
 labtrackingapp.orderNumberLabel=Order #
-labtrackingapp.returnToListPage=Return to List
+labtrackingapp.returnToListPage=Retour à la liste
 labtrackingapp.cancelOrder=Cancel Test Order
 labtrackingapp.proceduresSelected=Selected
-labtrackingapp.proceduresDisponibles=Disponibles
+labtrackingapp.proceduresAvailable=Disponibles
 labtrackingapp.loading=Chargement en cours...
 labtrackingapp.purge=Purge
 labtrackingapp.replacePDF=Replace PDF
@@ -60,8 +60,8 @@ labtrackingapp.pathology=Pathology
 labtrackingapp.noResults=No result
 labtrackingapp.notTaken=Not taken
 labtrackingapp.taken=taken
-labtrackingapp.résultats=résultats
-labtrackingapp.demandé=demandé
+labtrackingapp.results=résultats
+labtrackingapp.requested=demandé
 labtrackingapp.procedure=Procédure
 labtrackingapp.procedures=Procédures
 labtrackingapp.accessionNumber=Numéro d'entrée
