--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
 labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
+labtrackingapp.orderdetails.processedDatelabel=Date Processed
 labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
@@ -21,7 +22,7 @@ labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
-labtrackingapp.orderdetails.specimandetailslabel=Speciman details
+labtrackingapp.orderdetails.specimandetailslabel=Specimen details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
 labtrackingapp.orderdetails.uploadfilelabel=Results File
@@ -32,6 +33,7 @@ labtrackingapp.listpage.name=Name
 labtrackingapp.listpage.status=Status
 labtrackingapp.listpage.requestdate=Request Date
 labtrackingapp.listpage.sampledate=Sample Date
+labtrackingapp.listpage.processingDate=Processing Date
 labtrackingapp.listpage.resultdate=Result Date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Details
