UHM-6181, capture suspected cancer obs and implement filter

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
+labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
 labtrackingapp.orderdetails.specimandetailslabel=Specimen details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
