UHM-6181, capture phone number for clinician

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ labtrackingapp.orderdetails.title=Lab Test details
 labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
+labtrackingapp.orderdetails.phoneNumberForClinician=Phone number for clinician
 labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
 labtrackingapp.orderdetails.processedDatelabel=Date Processed
 labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
