--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -7,7 +7,7 @@ labtrackingapp.procedureNonCoded = Procedure Non-Coded
 labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
 labtrackingapp.clinicalhistorylabel=Clinical History
-labtrackingapp.pathologyspecimendetailslabel=Pathology Specimen details
+labtrackingapp.pathologyspecimendetailslabel=Specimen Processing Details
 labtrackingapp.resultdetailslabel=Result details
 labtrackingapp.orderdetails.title=Lab Test details
 labtrackingapp.orderdetails.label=Order details
