UHM-6371, add searchable procedure list

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 labtrackingapp.title=Pathology Tracking
 labtrackingapp.addorderpagetitle=Order a new test
+labtrackingapp.editOrderPageTitle=Edit existing order
 labtrackingapp.savingtitle=Saving Test Order
+labtrackingapp.loadingtitle=Loading Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.proceduresitelabel=Procedure\/Site
 labtrackingapp.procedureNonCoded = Procedure Non-Coded
