UHM-6369, add immunohistochemistry questions

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ labtrackingapp.editOrderPageTitle=Edit existing order
 labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.loadingtitle=Loading Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
-labtrackingapp.proceduresitelabel=Procedure\/Site
+labtrackingapp.proceduresitelabel=Procedure
 labtrackingapp.procedureNonCoded = Procedure Non-Coded
 labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
@@ -26,6 +26,8 @@ labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
 labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
+labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry Needed
+labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry Sent to Boston
 labtrackingapp.orderdetails.specimandetailslabel=Specimen details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
